--- a/responsive.css
+++ b/responsive.css
@@ -5,16 +5,47 @@
         align-items: center;
         justify-content: space-around;
     }
+    nav img {
+        padding-bottom: 15px;
+    }
+    nav {
+        flex-direction: column;
+    }
+    nav ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
+
+    nav li {
+        padding-bottom: 5px;
+    }
 
     .header {
         padding: 0;
+    }
+
+    table {
+      width: 100%;
+      display: block;
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+    th, td {
+      min-width: 100px; /* Adjust as needed */
+      white-space: nowrap;
     }
 
     .our-team ul {
         flex-direction: row;
         flex-wrap: wrap;
     }
-
+    .our-team ul li img {
+        width: 200px;
+        height: 200px;
+        padding-bottom: 0.3rem;
+    }
     .motivation ul {
         display: flex;
         flex-direction: column;
@@ -32,3 +63,5 @@
         margin-bottom: 50px;
     }
 }
+
+
